// -*- mode: protobuf; indent-tabs-mode: t; c-basic-offset: 8; tab-width: 8 -*-
syntax = "proto3";

package chef.automate.ui;
option go_package = "github.com/chef/automate/api/config/ui";

import "config/shared/global.proto";
import "config/shared/tls.proto";
import "automate-grpc/protoc-gen-a2-config/api/a2conf/annotations.proto";
import "google/protobuf/wrappers.proto";

message ConfigRequest {
  option (chef.automate.api.service_config) = {name: "automate-ui"};

	reserved 1 to 2;

	V1 v1 = 3;

	message V1 {
		System sys = 1;
		Service svc = 2;

		message System {
			chef.automate.infra.config.Mlsa mlsa = 1;
			Service service = 2;
			chef.automate.infra.config.TLSCredentials tls = 3;
			Nginx ngx = 4;
			Log log = 5;
			CustomSettings custom_settings = 6;

			message CustomSettings {
				Banner banner = 1;
				SessionSettings session_settings = 2;
			}

			message Service {
				google.protobuf.StringValue host = 1 [deprecated=true]; // The listen host is no longer setable(localhost only)
				google.protobuf.Int32Value port = 2 [ (chef.automate.api.port) = { name: "service", default: 10161, protocol: "https" } ];
			}

			message Nginx {
				google.protobuf.Int32Value worker_processes = 1;
				Events events = 2;
				Http http = 3;

				message Events {
					google.protobuf.Int32Value worker_connections = 1;
				}

				message Http {
					google.protobuf.StringValue sendfile = 1;
					google.protobuf.StringValue default_type = 2;
					google.protobuf.StringValue tcp_nopush = 3;
					google.protobuf.StringValue tcp_nodelay = 4;
					google.protobuf.Int32Value keepalive_timeout = 5;
					google.protobuf.StringValue gzip = 6;
					google.protobuf.StringValue gzip_vary = 7;
					google.protobuf.Int32Value gzip_min_length = 8;
					google.protobuf.StringValue gzip_proxied = 9;
					google.protobuf.StringValue gzip_types = 10;
					google.protobuf.StringValue gzip_disable = 11;
					google.protobuf.StringValue client_body_buffer_size = 12;
					google.protobuf.StringValue ssl_ciphers = 13;
					google.protobuf.StringValue ssl_protocols = 14;

				}
			}

			message Log {
				google.protobuf.StringValue level = 1;
			}
		}

		message Service {
		}

		message Banner {
			google.protobuf.BoolValue show = 1;
			google.protobuf.StringValue message = 2;
			google.protobuf.StringValue background_color = 3;
			google.protobuf.StringValue text_color = 4;
		}

		message SessionSettings {
			google.protobuf.BoolValue enable_idle_timeout = 1;
			google.protobuf.Int32Value idle_timeout_minutes = 2;
		}
	}
}
